<resources>
    <string name="app_title">TwitchFlix</string>

    <!-- Fields -->
    <string name="email">Email:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="password_again">Repeat your password:</string>

    <!-- Fields' Hints -->
    <string name="hint_username">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_create_email">someone@somewhere.example</string>
    <string name="hint_create_password">safepassword123</string>
    <string name="hint_create_user">awesomeUsername</string>

    <!-- Buttons -->
    <string name="button_login">Login</string>
    <string name="button_create_account">Create new account</string>
    <string name="button_forgot">Forgot my Password</string>
    <string name="checkbox_rememberme">Remember Me</string>
    <string name="button_create">Create</string>
    <string name="button_logout">Logout</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="button_stream">Stream</string>
    <string name="button_watch">Watch</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>

    <!-- Placeholders -->
    <string name="anonymous">anonymous</string>
    <string name="watch_wip">This watch page is a Work In Progress.</string>
    <string name="stream_wip">This stream page is a Work In Progress.</string>
    <string name="confirm_pass_text">Confirm your password in order to delete this account.</string>
    <string name="recovery_text">Enter the e-mail for the account you are trying to recover and we will send you an email</string>
    <string name="submit">Submit</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="warning">WARNING</string>
    <string name="logo">LOGO</string>
    <string name="author">author</string>
    <string name="video_title">Video title</string>
    <string name="thumbnail">thumbnail</string>

</resources>