<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/warning"
        android:elevation="10dp"
        android:outlineAmbientShadowColor="@color/bw_white"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_warning_24"
        app:layout_constraintBottom_toTopOf="@+id/delete_text"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/accent_imperial_red"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/delete_text"
        style="@style/GeneralText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:gravity="center"
        android:text="@string/confirm_pass_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/pass_delete"
        style="@style/LoginFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/login_fields"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/pass_delete">

        <Button
            android:id="@+id/delete_cancel_button"
            style="@style/LoginScreenButtonLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_login_screen_white"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/delete_delete_button"
            style="@style/LoginScreenButtonLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_red"
            android:text="@string/button_delete" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>